crates/libs/frieze-macros/tests/ui/nested_maybe.stderr
error: frieze: nested Maybe is not supported.
 --> tests/ui/nested_maybe.rs:6:8
  |
6 |     x: Maybe<Maybe<String>>,
  |        ^^^^^^^^^^^^^^^^^^^^
