crates/libs/frieze-macros/tests/ui/nested_maybe.rs
use frieze::Schema;
use frieze_model::Maybe;

#[derive(Schema)]
struct S {
    x: Maybe<Maybe<String>>,
}

fn main() {}
